Flere fikser av queryparam i linker

--- a/src/OpprettAvtale/OpprettelseFullfortVeileder/OpprettelseFullfortVeileder.less
+++ b/src/OpprettAvtale/OpprettelseFullfortVeileder/OpprettelseFullfortVeileder.less
@@ -1,6 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.opprettelseFullfort {
+.opprettelseFullfortVeileder {
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
@@ -72,7 +72,7 @@
 }
 
 @media (min-width: @screen-sm-min) {
-    .opprettelseFullfort {
+    .opprettelseFullfortVeileder {
         margin: 0 auto;
         max-width: @screen-sm-min;
 
