Bredde på innloggingslinje ihht bedristvelger

--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -14,7 +14,7 @@
 
     &__innhold {
         margin: 0 auto;
-        max-width: @screen-md;
+        max-width: 61rem;
         padding: 0.5rem;
         display: flex;
         align-items: center;
