--- a/src/AvtaleOversikt/IngenAvtaler/arbeidsgiver/IngenAvtalerArbeidsgiver.less
+++ b/src/AvtaleOversikt/IngenAvtaler/arbeidsgiver/IngenAvtalerArbeidsgiver.less
@@ -1,8 +1,9 @@
-@import '~nav-frontend-core/less/_variabler';
+@import 'node_modules/nav-frontend-core/less/_variabler';
 
 .ingenAvtalerArbeidsgiver {
     &__headerIkon {
-        margin-top: 0.5rem;
+        margin-top: 0.25rem;
+        margin-right: 0.5rem;
     }
 
     &__headerContainer {
