--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -31,6 +31,10 @@
                 }
             }
         }
+
+        @media print {
+            display: none;
+        }
     }
 
     &__popover-lenke {
@@ -48,6 +52,10 @@
         justify-content: space-between;
         margin-bottom: 1rem;
         margin-top: 1rem;
+
+        @media print {
+            display: none;
+        }
     }
 
     .tilbaketiloversikt {
