lagt til event listeners paa input- og list-keyEvent

--- a/src/AvtaleSide/steg/StillingSteg/StillingsSteg.less
+++ b/src/AvtaleSide/steg/StillingSteg/StillingsSteg.less
@@ -27,6 +27,8 @@
 
         &:focus {
             li {
+                outline: none;
+                border: none;
                 background-color: #c6c2bf;
             }
         }
