Oppdatert ikoner i slik fungerer losningen pa opprett avtale og lagt til header tekst. Co-authored-by: Bjarte Tynning <bjarte.tynning@nav.no>

--- a/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
+++ b/src/komponenter/EkspanderbartPanelRad/EkspanderbartPanelRad.less
@@ -1,29 +1,16 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .howto {
-    &__icon {
-        // flex-grow: 1;
-        // display: none;
-    }
-
     &__element {
         display: flex;
         margin-bottom: 1.5rem;
         padding: 1rem;
-        // margin-left: 0.5rem;
-        // margin-right: 0.5rem;
-        // margin-top: 1rem;
-        // align-items: flex-start;
-
-        // &:nth-child(0) {
-        //     flex-grow: 1;
-        // }
-        // &:nth-child(1) {
-        //     flex-grow: 5;
-        // }
     }
     &__tekst {
         margin-left: 1rem;
-        // flex-grow: 5;
+        margin-top: -0.3rem;
+    }
+    &__ikon {
+        width: 60px;
     }
 }
