--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtaler.less
@@ -6,11 +6,8 @@
     }
 
     &__ingenavtalerveileder {
-        display: flex;
-        flex-direction: column;
-        flex-shrink: 0;
-        justify-content: center;
-        align-items: center;
         height: 15rem;
+        padding-top: 2rem;
+        padding-left: 1rem;
     }
 }
