--- a/src/komponenter/Banner/Banner.less
+++ b/src/komponenter/Banner/Banner.less
@@ -13,3 +13,20 @@
     align-items: center;
     position: relative;
 }
+
+.banner-veileder-container {
+    display: flex;
+    justify-content: center;
+    padding: 0 1rem;
+}
+
+.banner-veileder {
+    height: 5rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    max-width: 72rem;
+    width: 100%;
+    align-items: center;
+}
