--- a/src/komponenter/LesMerPanel/LesMerPanel.less
+++ b/src/komponenter/LesMerPanel/LesMerPanel.less
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     .ReactCollapse--collapse {
-        // transition: 500ms;
+        transition: 300ms;
     }
 
     &__toggler {
