Visning av tilskuddsperioder (#596)
* Lagt til visning av tilskuddsperioder under beregning av tilskudd- og oppsummering-steg

Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

* lagt tilbake css som var kommentert ut.

Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

* lagt til featureToggle på visning av tilskuddsperiode fra backend

Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

* fjernet unused vars

Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

--- a/src/komponenter/LesMerPanel/LesMerPanel.less
+++ b/src/komponenter/LesMerPanel/LesMerPanel.less
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     .ReactCollapse--collapse {
-        transition: height 500ms;
+        transition: 300ms;
     }
 
     &__toggler {
