oppdatert otpSats inputfelt komponent

--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -5,4 +5,16 @@
     &__lonn-tittel {
         padding-bottom: 0.5rem;
     }
+
+    &__otpSats {
+        position: relative;
+        .skjemaelement__input {
+        }
+
+        &--label {
+            position: absolute;
+            bottom: 0.675rem;
+            left: 3rem;
+        }
+    }
 }
