oppdatert focusmarkering på varselstripe og rettet paa skjermlesing av meny elementene topp

--- a/src/AvtaleSide/DelLenkeTilAvtalen/DelLenkeTilAvtalen.less
+++ b/src/AvtaleSide/DelLenkeTilAvtalen/DelLenkeTilAvtalen.less
@@ -1,4 +1,8 @@
 .lenkedeling {
+    &__lenke {
+        display: flex;
+    }
+
     &__ikon {
         display: inline-block;
         margin-right: 0.45rem;
