--- a/src/AvtaleSide/TilbakeTilOversiktLenke/TilbakeTilOversiktLenke.less
+++ b/src/AvtaleSide/TilbakeTilOversiktLenke/TilbakeTilOversiktLenke.less
@@ -1,4 +1,8 @@
 .tilbaketiloversikt {
+    &__lenke {
+        display: flex;
+    }
+
     &__chevron {
         margin-right: 0.25rem;
         margin-bottom: 0.1rem;
