fjernet spesialtegn som hadde lurt seg inn i css filer.
Co-authored-by: Bjarte Tynning <bjarte.tynning@nav.no>

--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -30,7 +30,7 @@
 }
 
 @media (min-width: @screen-sm-min) {
-    ​.instruks {
+    .instruks {
         &__subheader {
             padding: 0 0 0 1.25rem;
         }
