skrivet om kontaktsteg. Skrevet vekk fra bruk av tabell pr gruppering

--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/ArbeidsgiverinfoDel/Relasjoner.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/ArbeidsgiverinfoDel/Relasjoner.less
@@ -1,15 +1,19 @@
 .relasjoner {
+    margin-top: 2rem;
+
     &__relasjon-hjelpetekst {
         border: 1px solid #c6c2bf;
         border-radius: 3px;
         padding: 1rem;
     }
+
     &__familietilknytning-valg {
         display: flex;
 
         label {
             flex-grow: 1;
             margin-right: 0.5rem;
+
             &:last-child {
                 margin-right: 0;
             }
