Lagt til innloggingsknapp for beslutter. vises forelopig bare lokalt. Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -1,7 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .innloggingsside {
-    max-width: 45rem;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -10,6 +9,10 @@
 
     &__koffertikon {
         margin-top: 4rem;
+    }
+
+    &__infotekst {
+        max-width: 45rem;
     }
 
     @media (min-width: @screen-sm-min) {
