Lagt til input for avslagsarsak og avslagsforklaring Co-authored-by: Mats Bolstad <mats.bolstad@nav.no> Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

--- a/src/BeslutterSide/BeslutterSide.less
+++ b/src/BeslutterSide/BeslutterSide.less
@@ -19,4 +19,19 @@
     &__fade {
         opacity: 0.3;
     }
+
+    &__avslag-boks {
+        background-color: #e9e7e7;
+        border-radius: 4px;
+        padding: 2rem;
+    }
+
+    &__avslag-input {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__avslagsforklaring {
+        width: 25rem;
+    }
 }
