--- a/src/AvtaleSide/steg/BeregningTilskudd/UtregningPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/UtregningPanel.less
@@ -1,8 +1,6 @@
 .utregningspanel {
-    &__ikon-placeholder {
-        width: 1.25rem;
-        height: 1.25rem;
-        margin-right: 0.5rem;
+    &__wrapper {
+        margin: 0.25rem;
     }
 
     &__operator {
@@ -33,6 +31,10 @@
         width: 100%;
         display: flex;
         align-items: center;
+
+        svg {
+            display: none;
+        }
     }
 
     &__utregning-verdi svg {
@@ -40,14 +42,38 @@
     }
 
     &__utregning-verdi {
-        width: 75%;
+        width: 40%;
         display: flex;
         justify-content: flex-end;
         align-items: center;
     }
     &__sum {
-        margin-left: 1rem;
         text-align: end;
-        min-width: 5rem;
+        min-width: 4rem;
+    }
+
+    &__label-sats {
+        padding-right: 0.5rem;
+    }
+
+    @media (min-width: 768px) {
+        &__ikon-placeholder {
+            width: 1.25rem;
+            height: 1.25rem;
+            margin-right: 0.5rem;
+        }
+
+        &__utregning-verdi {
+            width: 75%;
+        }
+        &__sum {
+            margin-left: 1rem;
+            min-width: 5rem;
+        }
+        &__label-innhold {
+            svg {
+                display: inline-block;
+            }
+        }
     }
 }
