--- a/src/AvtaleSide/steg/BeregningTilskudd/UtregningPanel.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/UtregningPanel.less
@@ -12,7 +12,8 @@
         display: flex;
         flex-direction: row;
         align-content: center;
-        height: 3.5rem;
+        min-height: 3.5rem;
+        height: 100%;
         border-bottom: 1px solid #c6c2bf;
 
         svg {
@@ -26,15 +27,21 @@
         }
     }
 
+    &__label-innhold {
+        height: 100%;
+    }
+
     &__utregning-label,
     &__label-innhold {
         width: 100%;
         display: flex;
         align-items: center;
-
         svg {
             display: none;
         }
+    }
+    &__utregning-label {
+        flex-direction: column;
     }
 
     &__utregning-verdi svg {
@@ -54,15 +61,26 @@
 
     &__label-sats {
         padding-right: 0.5rem;
+        width: 100%;
     }
 
     @media (min-width: 768px) {
+        &__label-sats {
+            width: unset;
+        }
+
+        &__utregning-rad {
+            height: 3.5rem;
+        }
+
         &__ikon-placeholder {
             width: 1.25rem;
             height: 1.25rem;
             margin-right: 0.5rem;
         }
-
+        &__utregning-label {
+            flex-direction: row;
+        }
         &__utregning-verdi {
             width: 75%;
         }
