--- a/src/OpprettAvtale/OpprettelseFullfortVeileder/OpprettelseFullfortVeileder.less
+++ b/src/OpprettAvtale/OpprettelseFullfortVeileder/OpprettelseFullfortVeileder.less
@@ -4,6 +4,7 @@
     padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     &__innholdstittel {
         margin: 1rem 0 2rem 0;
