--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -9,8 +9,8 @@
     min-width: 320px;
 
     @media (min-height: 710px) {
-        &--overflow-visible {
-            overflow: visible;
+        &__wrapper {
+            overflow: scroll;
         }
     }
 
