lagt las opp knapp i menylinjen. Lagt til sjekk paa visning om tidligere versjon panelet skal vises, lagt til ikon og tekst til varsel type.
Co-authored-by: Magnus Skalleberg Rom <magnus.skalleberg.rom@nav.no>

--- a/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/LaasOppKnapp.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/LaasOppKnapp.less
@@ -2,9 +2,19 @@
 
 .laasoppknapp {
     &__modal-nb-tekst {
+        margin: 1rem 0;
         display: flex;
         svg {
             margin-right: 0.5rem;
         }
+    }
+    &__modal-footer-tekst {
+        margin-bottom: 1.25rem;
+    }
+    &__lenke {
+        display: flex;
+    }
+    &__ikon {
+        margin-right: 0.5rem;
     }
 }
