--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreTilskudd/EndreTilskuddsberegning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreTilskudd/EndreTilskuddsberegning.less
@@ -28,5 +28,14 @@
                 flex: 0 45%;
             }
         }
+
+        &__topinputrad {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            align-items: center;
+            margin-top: 0.5rem;
+            padding-right: 2.75rem;
+        }
     }
 }
