fikset på tekst

--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -3,13 +3,14 @@
     &__subheader {
         padding: 0 0 0 0;
     }
-
+    /*
     &__instrukslist {
         margin-top: 1rem;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
+    */
 
     &__instrukslistsvg {
         display: none;
@@ -17,6 +18,13 @@
             display: block;
             margin-right: 1rem;
         }
+    }
+
+    &__kravomrefusjonlinker {
+        display: flex;
+        flex-direction: column;
+        margin-top: 1rem;
+        margin-left: -1rem;
     }
 
     @media print {
@@ -34,7 +42,7 @@
         &__subheader {
             padding: 0 0 0 1.25rem;
         }
-
+        /*
         &__instrukslist {
             margin-top: 1rem;
             margin-left: 1.25rem;
@@ -42,5 +50,6 @@
             flex-direction: row;
             align-items: center;
         }
+        */
     }
 }
