--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -90,6 +90,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                align-items: flex-end;
 
                 .knapp:not(:last-child) {
                     margin-bottom: 0rem;
