fikset designproblemer ifbm oppgradering av pakker
Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/src/AvtaleOversikt/AvtalekortMobil.less
+++ b/src/AvtaleOversikt/AvtalekortMobil.less
@@ -4,7 +4,7 @@
 
     &__ulest-varsel-ikon {
         background-color: #006eed;
-        border: 3px solid @grayBackground;
+        border: 3px solid @navGraBakgrunn;
         border-radius: 50%;
         color: #fff;
         height: 20px;
@@ -17,7 +17,7 @@
         display: inline-block;
         background-clip: border-box;
         background-image: linear-gradient(#54a3ff, #006eed);
-        border: 2px solid @grayBackground;
+        border: 2px solid @navGraBakgrunn;
         height: 55px;
         width: 1rem;
     }
