--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -19,7 +19,7 @@
 
     .ulest-varsel-ikon {
         background-color: #006eed;
-        border: 3px solid @grayBackground;
+        border: 3px solid @navGraBakgrunn;
         border-radius: 50%;
         color: #fff;
         height: 16px;
@@ -32,7 +32,7 @@
         display: inline-block;
         background-clip: border-box;
         background-image: linear-gradient(#54a3ff, #006eed);
-        border: 2px solid @grayBackground;
+        border: 2px solid @navGraBakgrunn;
         height: 55px;
         width: 1rem;
     }
