--- a/src/index.less
+++ b/src/index.less
@@ -12,7 +12,7 @@
 
 body,
 body .tiltaksgjennomforing {
-    background-color: @grayBackground;
+    background-color: @navGraBakgrunn;
     font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 
