oppdatert farge-palett paa bedriftmeny

--- a/src/index.less
+++ b/src/index.less
@@ -19,3 +19,9 @@ body .tiltaksgjennomforing {
 svg {
     display: block;
 }
+
+.bedriftsmeny {
+    background-color: @navBlaLighten80 !important;
+    border-bottom: 0.25rem solid @navBlaLighten60 !important;
+    padding: 1.5rem;
+}
