oppdatert styling paa komponent

--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/oppdatereKostnadssted.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/oppdatereKostnadssted.less
@@ -10,11 +10,12 @@
         .skjemaelement {
             margin-bottom: 0;
         }
-        .typo-ingress {
-            // text-transform: lowercase;
-        }
     }
     &__input-undertekst {
         margin-top: 0.75rem;
+
+        span:nth-child(2) {
+            font-weight: 600;
+        }
     }
 }
