--- a/src/komponenter/modal/AnnullerAvtaleModal.less
+++ b/src/komponenter/modal/AnnullerAvtaleModal.less
@@ -1,6 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.avbryt-avtale-modal {
+.annuller-avtale-modal {
     &__grunner-og-annet {
         display: flex;
         justify-content: space-between;
