Lagt til spacing mellom tekst og knapp
Co-authored-by: Millad Dagdoni <millad.dagdoni@nav.no>

--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/KontaktpersonRefusjoninfoDel/KontaktpersonRefusjoninfoDel.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/KontaktpersonRefusjoninfoDel/KontaktpersonRefusjoninfoDel.less
@@ -1,4 +1,4 @@
-.kontaktpersonRefusjoninfo{
+.kontaktpersonRefusjoninfo {
   &__container {
     padding: 0.5rem 0.5rem 2rem 0.5rem;
 
@@ -11,6 +11,10 @@
 
   &__skjemagruppe {
     margin-bottom: 0.5rem;
+  }
+
+  &__buttonSpaceing {
+    margin-top: 0.75rem;
   }
 
   &__rad {
