fikset at bekreftelsesmodal sitt ikon ble kuttet

--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -6,6 +6,7 @@
         padding: 1rem 1rem;
         max-width: 530px;
         min-width: 320px;
+        overflow: visible;
     }
 
     &__body {
