--- a/src/BeslutterSide/BeslutterSide.less
+++ b/src/BeslutterSide/BeslutterSide.less
@@ -1,37 +1,62 @@
+@import '~nav-frontend-core/less/_variabler';
+
 .beslutter-side {
+    background-color: white;
+    border-radius: 4px;
+    padding: 1.25rem;
+    margin-bottom: 0.25rem;
+
     &__container {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    &__innhold {
-        width: 50rem;
+
+    &__hoved-tittel {
+     margin: 1rem 0;
     }
+
     &__tittel {
         display: flex;
         justify-content: space-between;
     }
+
     &__grid-container {
-        display: grid;
-        grid-template-columns: 12rem auto;
-        row-gap: 1rem;
+        display: inline-block;
     }
+
+    &__infovisning-rad {
+      //  display: flex;
+    }
+
+    &__wrapper {
+        --grid-layout-gap: 0.5rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
+        grid-column-gap: var(--grid-layout-gap);
+        max-width: 75rem;
+        width: 100%;
+        margin: 0 0.375rem;
+    }
+
     &__fade {
         opacity: 0.3;
     }
 
-    &__avslag-boks {
-        background-color: #e9e7e7;
-        border-radius: 4px;
-        padding: 2rem;
-    }
+    @media(min-width: @container-large-desktop) {
+        &__wrapper {
+            grid-template-columns: minmax(10rem, 30rem) minmax(31.25rem, 1fr);
+        }
 
-    &__avslag-input {
-        display: flex;
-        justify-content: space-between;
-    }
+        &__grid-container {
+            margin: 1.5rem 0;
+            display: grid;
+            grid-template-columns: 12rem auto;
+            row-gap: 1rem;
+        }
 
-    &__avslagsforklaring {
-        width: 25rem;
+        &__infovisning-rad {
+            flex-direction: column;
+        }
     }
 }
