--- a/src/BeslutterSide/beslutterPanel/beslutterPanel.less
+++ b/src/BeslutterSide/beslutterPanel/beslutterPanel.less
@@ -3,10 +3,10 @@
 .beslutter-panel {
   background-color: white;
   border-radius: 8px;
-  padding: 1.25rem;
+  padding: 2rem 2.75rem 2rem 2.5rem;
   margin-bottom: 0.25rem;
   margin-right: 0.5rem;
-  height: 24.375rem;
+ //  height: 24.375rem;
 
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
   width: 100%;
@@ -38,7 +38,7 @@
   }
 
   @media(min-width: @container-large-desktop) {
-    height: 40rem;
+    // height: 40.625rem;
 
     &__input-wrapper {
       display: inherit;
