--- a/src/BeslutterSide/beslutterTilskuddsperioder/beslutterTilskuddsperioder.less
+++ b/src/BeslutterSide/beslutterTilskuddsperioder/beslutterTilskuddsperioder.less
@@ -1,13 +1,51 @@
 .beslutter-tilskuddsperioder {
-  background-color: white;
-  border-radius: 8px;
-  padding: 1.25rem 0.75rem;
-  margin-bottom: 0.25rem;
-  margin-right: 0.5rem;
-  height: 40rem;
-  overflow: auto;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
-  width: 100%;
+  &__tittel {
+    margin: 1.25rem 0 0.5rem 0.75rem;
+  }
+
+  &__container {
+    background-color: white;
+    border-radius: 8px;
+    padding: 1.25rem 0.75rem;
+    margin-bottom: 0.25rem;
+    margin-right: 0.5rem;
+    height: 40.625rem;
+    overflow: auto;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
+    width: 100%;
+
+    table {
+      tr.beslutter-tilskuddsperioder__tilskuddsperiode-rad.beslutter-tilskuddsperioder {
+        &__tilskuddsperiode-rad--gjeldende {
+          background-color: #F7F7F7;
+          & > td {
+            border-bottom: none;
+          }
+        }
+      }
+      tr.beslutter-tilskuddsperioder__knapp-row {
+        position: relative;
+        height: 7rem;
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+        background-color: #F7F7F7;
+        & > td {
+          border-bottom: none;
+        }
+        .beslutter-tilskuddsperioder__knapp-data {
+          background-color: #F7F7F7;
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          & > button:nth-child(1)  {
+              margin-left: 4rem;
+          }
+        }
+      }
+    }
+  }
 
   td, th {
     padding: 0.75rem;
@@ -15,16 +53,5 @@
 
   &__tilskuddsperiode-rad {
     cursor: pointer;
-    &:hover {
-      background-color: #E6F0FF;
-    }
-    &--valgtrad {
-      background-color: #F7F7F7;
-      &:hover {
-        background-color: #F7F7F7;
-      }
-    }
-
-
   }
 }
